--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <div class="about-text">
         <h1>I do code and <br />make content <span>about it!</span></h1>
         <p>
-          I am a seasoned full-stack software engineer with over 8 years of
-          professional experience, specializing in backend development. My
-          expertise lies in crafting robust and scalable SaaS-based
-          architectures on the Amazon AWS platform.
+          I am a seasoned front-end software engineer with over 2 years of
+          professional experience, specializing in front-end development. My
+          expertise lies in crafting robust and scalable front end pages using HTML,CSS,Bootstrap liabrary.
+          I working as a ReactJs developer since 1+ years.
         </p>
         <div class="about-btn">
           <button class="btn-primary">Get In Touch</button>
